[package]
name = "letterboxd"
version = "0.3.0"
authors = ["boxdot <d@zerovolt.org>"]
license = "MIT/Apache-2.0"
description = "Letterboxd API provides access to data on the Letterboxd.com website"
repository = "https://github.com/boxdot/letterboxd-rs"
keywords = ["rest", "letterboxd", "client"]
categories = ["api-bindings"]
readme = "README.md"
edition = "2018"

[dependencies]
hex = "0.4.0"
hyper = { version = "0.14.2", default-features = false, features = ["client", "http1"] }
hyper-tls = "0.5.0"
rust-crypto = "0.2.36"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
serde_url_params = "0.2.0"
uuid = { version = "0.8.1", features = ["v4"] }
url = "2.1.1"

[dev-dependencies]
tokio = { version = "1.0.2", features = ["macros", "rt", "rt-multi-thread"] }
