[package]
name = "letterboxd"
version = "0.3.1"
authors = ["boxdot <d@zerovolt.org>"]
license = "MIT/Apache-2.0"
description = "Letterboxd API provides access to data on the Letterboxd.com website"
repository = "https://github.com/boxdot/letterboxd-rs"
keywords = ["rest", "letterboxd", "client"]
categories = ["api-bindings"]
readme = "README.md"
edition = "2021"

[dependencies]
hex = "0.4.0"
hmac = "0.12.0"
hyper = { version = "0.14.2", default-features = false, features = ["client", "http1"] }
hyper-tls = "0.5.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
serde_url_params = "0.2.1"
sha2 = "0.10.0"
url = "2.1.1"
uuid = { version = "1.0.0", features = ["v4"] }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.0.2", features = ["macros", "rt", "rt-multi-thread"] }
